# inferencekt

./: .gitmodules  build.gradle.kts  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/: Platform.android.kt
composeApp/src/androidMain/kotlin/org/pinelang/pineai/: MainActivity.kt  PineAIApplication.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/: App.kt  Greeting.kt  ModelDebugText.kt  Platform.kt
composeApp/src/desktopMain/kotlin/: Platform.jvm.kt  main.kt
composeApp/src/iosMain/kotlin/: MainViewController.kt  Platform.ios.kt
gradle/: libs.versions.toml
inferencekt/: build.gradle.kts
inferencekt-llamacpp/: .gitignore  build.gradle.kts
inferencekt-llamacpp/src/androidMain/cpp/: CMakeLists.txt  llamakt.cpp
inferencekt-llamacpp/src/androidMain/kotlin/org/pinelang/inferencekt/: llamacpp.android.kt
inferencekt-llamacpp/src/androidMain/kotlin/org/pinelang/inferencekt/llamacpp/: llamacpp.android.kt
inferencekt-llamacpp/src/androidMain/kotlin/org/pinelang/llamakt/: llamacpp.android.kt
inferencekt-llamacpp/src/commonMain/kotlin/org/pinelang/inferencekt/: llamacpp.kt
inferencekt-llamacpp/src/commonMain/kotlin/org/pinelang/inferencekt/llamacpp/: llamacpp.kt
inferencekt-llamacpp/src/commonMain/kotlin/org/pinelang/llamakt/: llamacpp.kt
inferencekt-llamacpp/src/desktopMain/kotlin/org/pinelang/llamakt/: llamacpp.desktop.kt
inferencekt-llamacpp/src/jniMain/cpp/: CMakeLists.txt  llamakt.cpp  llamakt.h  llamakt_nojni.cpp  llamakt_nojni.h
inferencekt-llamacpp/src/jniMain/kotlin/org/pinelang/inferencekt/: llamacpp.jni.kt
inferencekt-llamacpp/src/jniMain/kotlin/org/pinelang/inferencekt/llamacpp/: llamacpp.jni.kt
inferencekt-llamacpp/src/jvmMain/kotlin/org/pinelang/inferencekt/: llamacpp.desktop.kt
inferencekt-llamacpp/src/jvmMain/kotlin/org/pinelang/inferencekt/llamacpp/: llamacpp.desktop.kt
inferencekt-llamacpp/src/jvmTest/kotlin/: JvmInferenceTest.kt
inferencekt-llamacpp/src/nativeInterop/cinterop/: llamakt.def
inferencekt-llamacpp/src/nativeMain/kotlin/: Main.kt
inferencekt-llamacpp/src/nativeMain/kotlin/org/pinelang/inferencekt/: llamacpp.native.kt
inferencekt-llamacpp/src/nativeMain/kotlin/org/pinelang/inferencekt/llamacpp/: llamacpp.native.kt
inferencekt-llamacpp/src/nativeMain/kotlin/org/pinelang/llamakt/: llamacpp.native.kt
inferencekt-llamacpp/src/nativeTest/kotlin/: InferenceTest.kt
inferencekt-llamacpp/src/test/java/org/pinelang/inferencekt/llamacpp/: ExampleUnitTest.kt
inferencekt/src/commonMain/kotlin/org/pinelang/inferencekt/: inference.kt
inferencekt/src/commonMain/kotlin/org/pinelang/llamakt/: inference.kt
inferencekt/src/test/java/org/pinelang/inferencekt/: ExampleUnitTest.kt
inferencekt/src/test/java/org/pinelang/llamakt/: ExampleUnitTest.kt
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
llamakt/: build.gradle.kts
llamakt/src/androidMain/cpp/: CMakeLists.txt  llamakt.cpp
llamakt/src/androidMain/kotlin/org/pinelang/llamakt/: LLM.android.kt
llamakt/src/androidTest/java/com/pinelab/llamakt/: ExampleInstrumentedTest.kt
llamakt/src/androidTest/java/org/pinelang/llamakt/: ExampleInstrumentedTest.kt
llamakt/src/commonMain/kotlin/org/pinelang/llamakt/: LLM.kt  inference.kt
llamakt/src/desktopMain/kotlin/org/pinelang/llamakt/: LLM.desktop.kt  llamacpp.desktop.kt
llamakt/src/main/cpp/: CMakeLists.txt  llamakt.cpp
llamakt/src/main/java/com/pinelab/llamakt/: LLM.kt
llamakt/src/main/java/org/pinelang/llamakt/: LLM.kt
llamakt/src/test/java/com/pinelab/llamakt/: ExampleUnitTest.kt
models/: readme.md
